--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div>
                 <button class="espaco" id="btn-salvar" onclick="comprador.salvar()" disabled> SALVAR</button>
                 <br><br>
-                <button id="btn-alterar" onclick="liberaAlterar(true)">CADASTRAR </button>
+                <button id="btn-alterar" onclick="liberaAlterar(true)">ALTERAR</button>
                 <br><br>
                 <button id="btn-deletar" onclick="comprador.deletar()" disabled> DELETAR</button>
             </div>
